--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             ng-repeat="Test in Tests track by $index">
 
 
-                <div class="Icon" ng-class="{'Right':(Test.Pan < 0), 'High':(Test.Frequency<1000)}"></div>
+                <div class="Icon" ng-class="{'Right':(Test.Pan>0), 'High':(Test.Frequency>1000)}"></div>
                 <div class="Slider Interactive"
                 ng-drag
                 ng-drag-move="Test.HandlerDrag"
