misc layout changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             ng-repeat="Test in Tests track by $index">
 
 
-                <div class="Icon" ng-class="{'Right':(Test.Pan>0), 'High':(Test.Frequency>1000)}"></div>
+                <div class="Icon" ng-class="{'Right':(Test.Pan>0), 'High':(Test.Frequency>1000), 'Initialized':Test.Initialized}"></div>
                 <div class="Slider Interactive"
                 ng-drag
                 ng-drag-move="Test.HandlerDrag"
@@ -104,7 +104,7 @@
                 {
                     Tone.Oscillator.frequency.value = inFrequency;
                     Tone.Panner.pan.value = inPan;
-                    Tone.GainDB.gain.value = inDB;
+                    Tone.GainDB.gain.value = inDB*0.015;
                 };
 
                 return Tone;
